Bug 7645 - System preferences editor save button obscured by language chooser
This patch amends the preferences page's CSS file to add
bottom padding to the page container. This gives the bottom-
most submit button some breathing room.

Markup correction: Adding "row" and "col" attributes to
<textareas> to quiet validation errors. This doesn't
affect output at all (dimensions are specified in CSS).

To test, open the system preferences page to a tab like OPAC
which contains many preferences. At the bottom of the page
the last submit button should have about a line's worth of
white space below it.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/preferences.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/preferences.css
@@ -66,3 +66,7 @@ h3.collapsed {
 	display: block;
 	font-weight: normal;
 }
+
+#yui-main {
+	margin-bottom:2em;
+}
